fix leaks: bug #24831

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@136584 c90b9560-bf6c-de11-be94-00142212c4b1